--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=atividade
+spring.mvc.dispatch-options-request=true
+spring.mvc.dispatch-trace-request=true
+server.port=8080
