refactor: adicao da senha e usuario nos properties, para que eu saia da tela de login gerada pelo spring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,13 @@
 spring.application.name=atividade
-spring.mvc.dispatch-options-request=true
-spring.mvc.dispatch-trace-request=true
+
 server.port=8080
+#spring.profiles.active=fake
+#spring.profiles.active=dev
+#spring.profiles.active=prod
+spring.profiles.active=sec
+spring.h2.console.enabled=true
+spring.sql.init.schema-locations=classpath:scripts-database/create-tables.sql
+spring.sql.init.data-locations=classpath:scripts-database/insert-data.sql
+spring.security.user.name=postgres
+spring.security.user.password=postgres
+
