--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=atividade
+server.port=8080
+#spring.profiles.active=fake
+#spring.profiles.active=dev
+spring.profiles.active=prod
+spring.h2.console.enabled=true
+spring.sql.init.schema-locations=classpath:database/create-table.sql
+spring.sql.init.data-locations=classpath:database/insert-data.sql
