feat ecriptando a senha e adiciononando coluna no create table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=atividade
 server.port=8080
 #spring.profiles.active=fake
 #spring.profiles.active=dev
-spring.profiles.active=prod
+#spring.profiles.active=prod
+spring.profiles.active=ldsSecurity
 spring.h2.console.enabled=true
-spring.sql.init.schema-locations=classpath:database/create-table.sql
+spring.sql.init.schema-locations=classpath:database/create-tables-postgres.sql
 spring.sql.init.data-locations=classpath:database/insert-data.sql
