--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,5 @@
-spring.application.name=atividade
 spring.h2.console.enabled=true
-spring.datasource.name=database
+spring.datasource.name=db_atividade
 spring.datasource.base.url=jdbc:postgresql://localhost:5432/
 spring.datasource.url=jdbc:postgresql://localhost:5432/${spring.datasource.name}
 spring.datasource.username=postgres
